@@ -1,29 +1,29 @@
 <?php
 /**
- * Smarty Internal Plugin Resource Extends
- *
- * @package Smarty
- * @subpackage TemplateResources
- * @author Uwe Tews
- * @author Rodney Rehm
- */
+* Smarty Internal Plugin Resource Extends
+*
+* @package Smarty
+* @subpackage TemplateResources
+* @author Uwe Tews
+* @author Rodney Rehm
+*/
 
 /**
- * Smarty Internal Plugin Resource Extends
- *
- * Implements the file system as resource for Smarty which {extend}s a chain of template files templates
- *
- * @package Smarty
- * @subpackage TemplateResources
- */
+* Smarty Internal Plugin Resource Extends
+*
+* Implements the file system as resource for Smarty which {extend}s a chain of template files templates
+*
+* @package Smarty
+* @subpackage TemplateResources
+*/
 class Smarty_Internal_Resource_Extends extends Smarty_Resource {
 
     /**
-     * populate Source Object with meta data from Resource
-     *
-     * @param Smarty_Template_Source   $source    source object
-     * @param Smarty_Internal_Template $_template template object
-     */
+    * populate Source Object with meta data from Resource
+    *
+    * @param Smarty_Template_Source   $source    source object
+    * @param Smarty_Internal_Template $_template template object
+    */
     public function populate(Smarty_Template_Source $source, Smarty_Internal_Template $_template=null)
     {
         $uid = '';
@@ -53,10 +53,10 @@ class Smarty_Internal_Resource_Extends extends Smarty_Resource {
     }
 
     /**
-     * populate Source Object with timestamp and exists from Resource
-     *
-     * @param Smarty_Template_Source $source source object
-     */
+    * populate Source Object with timestamp and exists from Resource
+    *
+    * @param Smarty_Template_Source $source source object
+    */
     public function populateTimestamp(Smarty_Template_Source $source)
     {
         $source->exists = true;
@@ -67,12 +67,12 @@ class Smarty_Internal_Resource_Extends extends Smarty_Resource {
     }
 
     /**
-     * Load template's source from files into current template object
-     *
-     * @param Smarty_Template_Source $source source object
-     * @return string template source
-     * @throws SmartyException if source cannot be loaded
-     */
+    * Load template's source from files into current template object
+    *
+    * @param Smarty_Template_Source $source source object
+    * @return string template source
+    * @throws SmartyException if source cannot be loaded
+    */
     public function getContent(Smarty_Template_Source $source)
     {
         if (!$source->exists) {
@@ -98,17 +98,25 @@ class Smarty_Internal_Resource_Extends extends Smarty_Resource {
             // extend sources
             if ($_component != $_last) {
                 if (preg_match_all("!({$_ldl}block\s(.+?){$_rdl})!", $_content, $_open) !=
-                        preg_match_all("!({$_ldl}/block{$_rdl})!", $_content, $_close)) {
+                preg_match_all("!({$_ldl}/block{$_rdl})!", $_content, $_close)) {
                     throw new SmartyException("unmatched {block} {/block} pairs in template {$_component->type} '{$_component->name}'");
                 }
-                preg_match_all("!{$_ldl}block\s(.+?){$_rdl}|{$_ldl}/block{$_rdl}!", $_content, $_result, PREG_OFFSET_CAPTURE);
+                preg_match_all("!{$_ldl}block\s(.+?){$_rdl}|{$_ldl}/block{$_rdl}|{$_ldl}\*([\S\s]*?)\*{$_rdl}!", $_content, $_result, PREG_OFFSET_CAPTURE);
                 $_result_count = count($_result[0]);
                 $_start = 0;
-                while ($_start < $_result_count) {
+                while ($_start+1 < $_result_count) {
                     $_end = 0;
                     $_level = 1;
+                    if (substr($_result[0][$_start][0],0,strlen($source->smarty->left_delimiter)+1) == $source->smarty->left_delimiter.'*') {
+                        echo 'lll';
+                        $_start++;
+                        continue;
+                    }
                     while ($_level != 0) {
                         $_end++;
+                        if (substr($_result[0][$_start + $_end][0],0,strlen($source->smarty->left_delimiter)+1) == $source->smarty->left_delimiter.'*') {
+                            continue;
+                        }
                         if (!strpos($_result[0][$_start + $_end][0], '/')) {
                             $_level++;
                         } else {
@@ -126,11 +134,11 @@ class Smarty_Internal_Resource_Extends extends Smarty_Resource {
     }
 
     /**
-     * Determine basename for compiled filename
-     *
-     * @param Smarty_Template_Source $source source object
-     * @return string resource's basename
-     */
+    * Determine basename for compiled filename
+    *
+    * @param Smarty_Template_Source $source source object
+    * @return string resource's basename
+    */
     public function getBasename(Smarty_Template_Source $source)
     {
         return str_replace(':', '.', basename($source->filepath));
